test-resources/aergia-backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aergia-backend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: aergia-controller-manager-metrics-service
  namespace: aergia-backend
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  namespace: aergia-backend
  name: aergia-backend
  labels:
    app.kubernetes.io/name: aergia-backend
    app.kubernetes.io/part-of: ingress-nginx
spec:
  selector:
    control-plane: controller-manager
  ports:
  - name: backend
    port: 80
    targetPort: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: aergia-controller-manager
  namespace: aergia-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.4.1
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      - args:
        - --metrics-addr=127.0.0.1:8080
        - --enable-leader-election
        # Setting the environment variable DEBUG we can see the headers sent 
        # by the ingress controller to the backend in the client response.
        # env:
        # - name: DEBUG
        #   value: "true"
        ports:
        - containerPort: 5000
          name: backend
        command:
        - /manager
        image: amazeeio/aergia:v0.0.1
        name: manager
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 10
