test-resources/example-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example-nginx
  labels:
    lagoon.sh/project: example
    lagoon.sh/environment: "nginx"
    lagoon.sh/environmentType: "development"
---
apiVersion: v1
kind: Service
metadata:
  name: example-nginx-svc
  namespace: example-nginx
  labels:
    lagoon.sh/service: "nginx"
    lagoon.sh/project: example
    lagoon.sh/environment: "nginx"
    lagoon.sh/environmentType: "development"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: example-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-nginx
  namespace: example-nginx
  labels:
    idling.lagoon.sh/watch: 'true'
    idling.lagoon.sh/idled: 'true'
    lagoon.sh/service: "nginx"
    lagoon.sh/project: example
    lagoon.sh/environment: "nginx"
    lagoon.sh/environmentType: "development"
  annotations:
    idling.lagoon.sh/unidle-replicas: '3'
spec:
  replicas: 0
  selector:
    matchLabels:
      app: example-nginx
  template:
    metadata:
      labels:
        app: example-nginx
    spec:
      containers:
      - name: example-nginx
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: example-nginx
  # add annotation to expose the headers to the backend service for 503 only
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "503"
  labels:
    lagoon.sh/service: "nginx"
    lagoon.sh/project: example
    lagoon.sh/environment: "nginx"
    lagoon.sh/environmentType: "development"
    lagoon.sh/autogenerated: "true"
spec:
  rules:
  - host: aergia.localhost
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: example-nginx-svc
            port:
              number: 80
