test-resources/traefik-default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aergia-backend
spec:
  defaultBackend:
    service:
      name: aergia-controller-controller-manager-backend
      port:
        number: 80
